--- a/package.json
+++ b/package.json
@@ -11,14 +11,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.0",
+    "@angular/animations": "^8.1.0",
+    "@angular/cdk": "^8.0.2",
     "@angular/common": "~8.1.0",
     "@angular/compiler": "~8.1.0",
     "@angular/core": "~8.1.0",
     "@angular/forms": "~8.1.0",
+    "@angular/material": "^8.0.2",
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
+    "bootstrap": "^4.3.1",
+    "hammerjs": "^2.0.8",
+    "imagesloaded": "^4.1.4",
+    "masonry-layout": "^4.2.2",
+    "moment": "^2.24.0",
+    "ng-masonry-grid": "^1.3.0",
+    "ngx-masonry": "^1.1.2",
+    "ngx-masonry-grid": "0.0.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
